--- a/src/css/main.scss
+++ b/src/css/main.scss
@@ -125,12 +125,14 @@ $ease: cubic-bezier(0.1, 0.7, 1.0, 0.1);
         align-items: center;
         .content__h2 {
             font-family: $font1;
-            font-size: 3.5em;
+            font-size: 2.3em;
+            text-align: center;
         }
         .content__h5 {
             padding-top: .5rem;
             font-size: 1.1em;
             color: $color1;
+            text-align: center;
         }
         @media all and (max-width: 1200px) {
             padding: 1em 4em;
